[package]
name = "copy-traing-bot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
chrono = "0.4.26"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.62"
serde = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-stream = "0.1.11"
serde_json = "1.0.86"
maplit = "1.0.2"
futures = "0.3.24"
solana-account-decoder = "~2.1.1"
solana-sdk = "~2.1.1"
solana-client = "~2.1.1"
solana-transaction-status = "~2.1.1"
yellowstone-grpc-client = "4.1.0"
yellowstone-grpc-proto = "4.1.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-client = "0.13.0"
base64 = "0.13"
